# PneumoStabSim-Professional

./: .editorconfig  .env  .env.cipilot  .env.example  .envrc  .flake8  .gh_pr_body.md  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  1.json  3D_PROBLEM_DIAGNOSIS_COMPLETE.md  ACTION_PLAN_NEXT_STEPS.md  AGENTS.MD  ALL_PARAMETERS_FIXED_FINAL_REPORT.md  ANALYZE_LOGS_README.md  ANGLE_NORMALIZATION_BUG_FIX_v4.9.4.md  ANIMATED_PNEUMATIC_SCHEME_PLAN.md  APP_CHECK_SUMMARY.md  APP_HEALTH_CHECK_REPORT.md  APP_LAUNCH_DIAGNOSIS.md  AUDIT_SUMMARY.md  AUTO_LOG_DIAGNOSTICS_FINAL.md  App.xaml  App.xaml.cs  BACKGROUND_FIRST_CLICK_FIX_v4.7.md  BACKGROUND_FIX_HOWTO.md  BACKGROUND_ROTATION_FIX_REPORT.md  BACKUP_CONFIG.md  BASELINE_WORKING_STATE.md  BLACK_SCREEN_DIAGNOSTIC.md  BLACK_SCREEN_ROOT_CAUSE.md  BLOOM_TONEMAP_FIX.md  BLOOM_VIGNETTE_TONEMAP_FIX_SUMMARY.md  BUILD_ANALYSIS_REPORT.md  CAMERA_FIX_CHECKLIST.md  CANVAS_WHITE_STRIP_DIAGNOSIS.md  CHAT_HISTORY_PNEUMATIC_SUSPENSION_DEVELOPMENT.md  CHAT_SAVED_CONFIRMATION.md  (+680 more)
.devcontainer/: devcontainer.json
.githooks/: pre-push.ps1
.github/: CONTRIBUTING.md  copilot-instructions.md  copilot-workspace.json  pull_request_template.md
.github/workflows/: autonomous-check.yml  branch-audit.yml  ci-cd.yml  ci-default.yml  ci.yml  codeql-analysis.yml  container-test.yml  nightly.yml  regression-tests.yml  release.yml  testing-entrypoint.yml  windows-smoke.yml
.hooks/: pre-push
Properties/: launchSettings.json
app/: app.py  app.pyproj
archive/old_qml/: rhi_test.qml  temp_diagnostic_test.qml  test_circle_2d_temp.qml  test_sphere_temp.qml  (+10 more)
assets/: README.md
config/: README.md  __init__.py  app_config.yaml  app_settings.json  app_settings.schema.json  appsettings.Development.json  appsettings.json  aqt-docker.ini  constants.py  graphics_defaults.py  orbit_presets.json  qml_bridge.yaml  runtime_defaults.json  ui_constants.json
docs/: AI_AGENT_INDEX.md  ANTIALIASING_FIX_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_MAP.md  ARCHITECTURE_OVERVIEW.md  BETA_TESTING_PLAYBOOK.md  CHANGELOG.md  CHANGELOG_MODULAR.md  CHECKBOX_FIX_FINAL_REPORT.md  CI.md  CI_CD.md  CLI.md  CODEX_COPILOT_PROMPT.md  CODE_STYLE.md  COMPREHENSIVE_SETUP_REPORT.md  CONTRIBUTING.md  DATA_BACKUP_AND_RECOVERY.md  DECISIONS_LOG.md  DEVELOPMENT_GUIDE.md  DIAGNOSTICS.md  DOCUMENTATION_SUMMARY.md  ENVIRONMENT_SETUP.md  ENV_VARS_MATRIX.md  EVENT_LOGGING_INTEGRATION_GUIDE.md  EXTENDEDSCENEENVIRONMENT_DEFAULT_VALUES_TEST.md  FINAL_ACTION_PLAN.md  FINAL_COMPLETION_PLAN.md  FINAL_REFACTORING_PLAN.md  GRAPHICS_LOGGING.md  GRAPHICS_LOGGING_QUICKSTART.md  HDR_PATHS_QUICK_START.md  HDR_PATHS_UNIFIED.md  IBL_FLAGS_INDEPENDENCE_FIX_v4.9.5.md  IBL_LOGGING_GUIDE.md  IBL_SEPARATION_FIX_v4.9.5.md  IBL_SKYBOX_SEPARATION_FIX.md  INDEX.md  INITIAL_GEOMETRY_CALCULATION.md  INTERFACES_PUBLIC_API.md  LOCALIZATION_GUIDE.md  (+67 more)
pytestqt/: __init__.py  plugin.py
qml/: PressureScale.qml  Reservoir.qml  SimulationPanel.qml  SimulationRoot.qml  ThreeDScene.qml
reports/: GLSL_450_ENVIRONMENT_CHECK_REPORT.md  content_diffs.md  coverage-summary.txt  coverage_key_modules.txt  coverage_summary.txt  graphics_panel_audit_summary.md  graphics_parameter_audit_2025-02-15.md  pytest-junit.xml  pytest_last.txt  qml_error_tasks.md  qml_python_diff_analysis.md  qt_quick3d_shader_batching_research.md  remote_comparison.json  remote_comparison.md  runtime_graphics_sync_analysis.md  test_report_1759900935.json  test_report_1762370196.json  test_run_2025-02-06.md  test_run_summary.md  test_verification_2025-03-05.md  trace_run_2025-10-29.md
scripts/: README.md  README_PYTHON_WRAPPER.md  activate.ps1  activate_environment.ps1  bootstrap_uv.py  check_environment.py  clean.py  comprehensive_test.py  create_solution.py  entrypoint.sh  export_copilot_chat.py  health_check.py  install_deps.py  install_qt.py  interactive_launcher.py  load_cipilot_env.ps1  load_cipilot_env.sh  optimize_effects.py  python.bat  python.ps1  run_all.sh  run_gui.ps1  run_tests_ci.ps1  run_windowed.ps1  setup_dev.py  setup_linux.sh  setup_windows.ps1  terminal_diagnostic.py  testing_entrypoint.py  xvfb_wrapper.sh
src/: __init__.py  app_runner.py  app_runner.py.rej
temp_backup/: .editorconfig  FEEDBACK_README.md  audit_pre.md  test_geometry_ui.py
tests/: README.md  __init__.py  _qt_headless.py  _qt_runtime.py  conftest.py  demo_road.py  demo_runtime_p7.py  p7_final_report.py  p7_verification_final.py  p7_verify.py  test_analyze_logs.py  test_feedback_service.py  test_gas_adiabatic_isothermal.py  test_gas_simple.py  test_gas_valves.py  test_geometry_bridge_units.py  test_geometry_no_receivers.py  test_geometry_validation.py  test_ibl_logger.py  test_integration_simple.py  test_invariants.py  test_invariants_geometry.py  test_kinematics.py  test_logging_and_export.py  test_logging_setup.py  test_mapping.py  test_material_state_store.py  test_modes_panel_refactored.py  test_ode_dynamics.py  test_odes_basic.py  test_performance_smoke.py  test_physics_integration.py  test_physics_simple.py  test_receiver_relief.py  test_road_basic.py  test_road_simple.py  test_runtime_basic.py  test_runtime_complete.py  test_scipy_direct.py  test_settings_smoke.py  (+6 more)
tmp_legacy/: app_settings.json
tools/: __init__.py  ai_diagnose.py  analyze_file_sizes.py  analyze_logs.py  analyze_mainwindow_size.py  audit_config.py  autonomous_check.py  capture_bridge_indicator_screenshots.py  check_forbidden_artifacts.py  check_shader_logs.py  check_ui_utf8.py  check_workflow_pins.py  ci_tasks.py  cipilot_environment.py  collect_logs.py  collect_qml_errors.py  cross_platform_test_prep.py  effects_performance_benchmark.py  encoding_normalizer.py  env_profiles.py  env_registry.py  feedback_sync.py  full_verify.py  generate_qmllint_targets.py  hdr_backend_matrix.py  headless.py  install_qt_runtime.sh  merge_conflict_scan.py  performance_gate.py  performance_monitor.py  pre_audit.py  pre_audit_updated.py  project_sanitize.py  pytest_skip_guard.py  qml_lint_runner.py  render_diagnostics.py  run_pytest_capture.py  run_rhi_effects_sweep.py  run_test_case.py  settings_cycle_runner.py  (+14 more)
(+1394 files in other folders)
