[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PneumoStabSim-Professional"
version = "0.1.0"
description = "Pneumatic stabilizer simulation with3D visualization"
keywords = ["pneumatic", "stabilizer", "simulation", "3d", "qt", "pyside6"]
classifiers = [
 "Development Status ::4 - Beta",
 "Intended Audience :: Science/Research",
 "License :: OSI Approved :: MIT License",
 "Programming Language :: Python ::3",
 "Programming Language :: Python ::3.13",
 "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
 "numpy>=1.24.0,<3.0",
 "scipy>=1.10.0,<2.0",
 "PySide6>=6.10.0,<7.0.0",
 "shiboken6>=6.10.0,<7.0.0",
 "PyOpenGL>=3.1.0",
 "PyOpenGL-accelerate>=3.1.0",
 "matplotlib>=3.5.0",
 "Pillow>=8.0.0",
 "psutil>=5.8.0",
 "python-dotenv>=1.0.0",
 "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
 "pytest>=7.4",
 "pytest-cov>=4.1",
 "pytest-xdist>=3.5",
 "pytest-qt>=4.2",
 "black>=24.10.0",
 "flake8>=6.0",
 "ruff>=0.6.9",
 "mypy>=1.11.2",
 "pre-commit>=3.8",
]
docs = [
 "sphinx>=4.0",
 "sphinx-rtd-theme>=1.0",
]
performance = [
 "numba>=0.56.0",
 "cython>=0.29.0",
]

[project.urls]
"Homepage" = "https://github.com/barmaleii77-hub/PneumoStabSim-Professional"
"Bug Reports" = "https://github.com/barmaleii77-hub/PneumoStabSim-Professional/issues"
"Source" = "https://github.com/barmaleii77-hub/PneumoStabSim-Professional"
"Documentation" = "https://pneumostabsim-professional.readthedocs.io/"

[project.scripts]
pneumostabsim = "app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*", "config*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.qml", "*.hdr", "*.png", "*.jpg", "*.ico"]

[tool.black]
line-length =88
target-version = ['py311', 'py312', 'py313']
include = '\\.pyi?$'
extend-exclude = '''
/(
 # directories
 \.eggs
 | \.git
 | \.hg
 | \.mypy_cache
 | \.tox
 | \.venv
 | build
 | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
 "PySide6.*",
 "OpenGL.*",
 "numpy.*",
 "scipy.*",
 "matplotlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
 "tests",
]
qt_api = "pyside6"

[tool.coverage.run]
source = ["src"]
omit = [
 "*/tests/*",
 "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
 "pragma: no cover",
 "def __repr__",
 "if self.debug:",
